syntax = "proto3";

option go_package = "github.com/runmedev/runme/v3/api/gen/proto/go/agent";

message FileSearchResult {
  // The unique ID of the file.
  string FileID = 1;
  // The name of the file.
  string FileName = 2;
  // The relevance score of the file.
  double Score = 3;

  // Link to display for this file
  string Link = 4;
  // TOO(jlewi): Should we include the file contents?
}
